--- a/style.css
+++ b/style.css
@@ -37,6 +37,22 @@ nav {
   padding: 20px;
 }
 
+.dark-nav li {
+  margin-right: 10px;
+}
+
+.white-nav li {
+  margin-right: 20px;
+}
+
+.white-nav {
+  justify-content: space-between;
+}
+
+.logo-img {
+  display: none;
+}
+
 .yellow-nav {
   background-color: var(--yellow);
 }
