--- a/style.css
+++ b/style.css
@@ -309,6 +309,10 @@ time {
   color: var(--gray);
 }
 
+.boxes .hidden {
+  display: none;
+}
+
 
 @media screen and (min-width: 600px) {
   .flex {
