--- a/style.css
+++ b/style.css
@@ -61,11 +61,6 @@ nav {
   margin: auto;
 }
 
-.white-hover,
-.black-hover {
-  display: none;
-}
-
 .display-m {
   display: block;
 }
@@ -130,15 +125,6 @@ footer .fas {
   margin: 0 5px;
 }
 
-footer .fab:hover,
-footer .fas:hover {
-  background-color: var(--darkColor);
-}
-
-.footer-links a:hover {
-  color: var(--whiteColor);
-}
-
 .stackpath {
   color: var(--whiteColor);
 }
@@ -188,20 +174,12 @@ footer .fas:hover {
   margin-bottom: 20px;
 }
 
+.latest-heading li {
+  padding-bottom: 10px;
+}
+
 .highlights ul > li {
   margin-right: 10px;
-}
-
-.highlights a:hover {
-  color: var(--whiteColor);
-}
-
-.white-hover a:hover {
-  color: var(--whiteColor);
-}
-
-.black-hover a:hover {
-  color: var(--darkColor);
 }
 
 time {
@@ -222,10 +200,6 @@ time {
 .latest-heading ul {
   flex-direction: column-reverse;
   margin-top: 10px;
-}
-
-.latest-heading li {
-  padding-bottom: 10px;
 }
 
 .latest-heading a,
@@ -275,10 +249,6 @@ time {
   color: var(--gray);
 }
 
-.top-box:hover {
-  cursor: pointer;
-}
-
 .center-box {
   padding: 10px;
   flex-direction: column;
@@ -292,7 +262,7 @@ time {
 }
 
 .bottom-box {
-  border-top: 1px solid rgba(255,68,34,.25);
+  border-top: 1px solid rgba(255, 68, 34, 0.25);
   background-color: #fffaf8;
   padding: 10px;
 }
@@ -314,6 +284,37 @@ time {
   display: none;
 }
 
+/* Hover styling */
+
+.top-box:hover {
+  cursor: pointer;
+}
+
+.white-hover,
+.black-hover {
+  display: none;
+}
+
+.highlights a:hover {
+  color: var(--whiteColor);
+}
+
+.white-hover a:hover {
+  color: var(--whiteColor);
+}
+
+.black-hover a:hover {
+  color: var(--darkColor);
+}
+
+footer .fab:hover,
+footer .fas:hover {
+  background-color: var(--darkColor);
+}
+
+.footer-links a:hover {
+  color: var(--whiteColor);
+}
 
 @media screen and (min-width: 600px) {
   .flex {
@@ -422,8 +423,8 @@ time {
   }
 
   .boxes {
-    display:flex;  
-    justify-content: space-between;  
+    display: flex;
+    justify-content: space-between;
   }
 
   .box {
@@ -438,18 +439,16 @@ time {
   #third-box {
     display: block;
   }
-
 }
 
 @media screen and (min-width: 768px) {
-
   /* Highlights  */
 
   .highlights {
     height: 550px;
   }
 
-  .highlight{
+  .highlight {
     width: 70%;
     height: 500px;
     position: relative;
@@ -463,7 +462,7 @@ time {
   .sub-highlight {
     height: 245px;
   }
-  
+
   .highlight img {
     display: block;
     width: 40%;
@@ -507,8 +506,8 @@ time {
   .box {
     width: 24%;
   }
+
   #fourth-box {
     display: block;
   }
-
 }
