--- a/style.css
+++ b/style.css
@@ -319,11 +319,17 @@ footer .fas:hover {
   }
 
   .dark-nav {
+    display: flex;
     background-color: var(--darkColor);
     flex-direction: row;
     justify-content: space-between;
     padding-bottom: 5px;
   }
+
+  .white-hover,
+   .black-hover {
+    display: flex;
+}
 
   nav .fa-bars,
   .logo-img {
