--- a/style.css
+++ b/style.css
@@ -318,10 +318,16 @@ footer .fas:hover {
   }
 
   .dark-nav {
+    display: flex;
     background-color: var(--darkColor);
     flex-direction: row;
     justify-content: space-between;
     padding-bottom: 5px;
+  }
+
+  .white-hover,
+  .black-hover {
+    display: flex;
   }
 
   nav .fa-bars,
