--- a/style.css
+++ b/style.css
@@ -407,9 +407,9 @@ footer .fas {
 }
 
 .sub-news h4 {
-  margin-top: 10px;
+  margin-top: 2px;
   margin-bottom: 5px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: var(--darkColor);
 
 }
@@ -417,6 +417,11 @@ footer .fas {
 .sub-news .wrapper {
   flex-direction: column;
   margin-left: 10px;
+}
+
+.sub-news ul {
+  font-size: 0.6rem;
+  color: var(--gray);
 }
 
 /* Hover styling */
