Change styling for tablet scree

--- a/style.css
+++ b/style.css
@@ -676,7 +676,11 @@ footer .fas:hover {
     font-size: 0.8rem;
     font-weight: bold;
   }
-
+  
+  .deals ul {
+    color: var(--darkColor);
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
